--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ input {
   margin: 0;
   padding: 0;
   outline: none;
-  font: inherit;
+  font-family: 'Arial', sans-serif;
   width: 100%;
   height: 15vh;
   font-size: 4em;
