--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   font-family: "Courier New", Courier, monospace;
 }
 main {
-  width: 600px;
+  width: min(600px, 100%);
   margin: 0 auto;
 }
 
@@ -19,10 +19,10 @@ input {
   margin: 0;
   padding: 0;
   outline: none;
-  font: inherit;
+  font: sans-serif;
   width: 100%;
-  height: 15vh;
-  font-size: 4em;
+  height: 100px;
+  font-size: 2.4em;
   text-align: center;
 }
 
@@ -32,9 +32,9 @@ input {
 }
 
 .buttons {
-  width: 10%;
+  /* width: 10%; */
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
 }
 
 .sym {
@@ -48,22 +48,22 @@ input {
   cursor: default;
 }
 
-.sym:hover {
-  background-color: lightgreen;
-}
-
 #error {
   color: red;
   font-size: 1.5em;
   border: 1px solid black;
-  width: 90%;
+  width: 100%;
   font-weight: bold;
   text-align: center;
   vertical-align: middle;
   background-color: pink;
-  height: 14vh;
+  height: 50px;
 }
 
 #error span {
   color: black;
+}
+
+.info {
+  font-size: 30px;
 }
